[package]
name = "esedb"
version = "0.1.0"
authors = ["William R. Fraser <wfraser@codewise.org>"]

[dependencies]
log = "0.3.6"
#winapi = "0.2.8"
#esent-sys = "0.1.0"
#ole32-sys = "0.2.0"

[dependencies.esent-sys]
branch = "esent-wip"
git = "https://github.com/wfraser/winapi-rs"

[dependencies.winapi]
branch = "esent-wip"
git = "https://github.com/wfraser/winapi-rs"

[dependencies.ole32-sys]
branch = "esent-wip"
git = "https://github.com/wfraser/winapi-rs"

[dev-dependencies]
env_logger = "0.3.4"
